--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* body {
-  background-color: black;
-  color: white;
-  font-family: Arial, sans-serif;
-} */
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+
